--- a/monitor/docker-compose.yml
+++ b/monitor/docker-compose.yml
@@ -20,6 +20,17 @@ services:
     depends_on:
       - prometheus
 
+  cadvisor:
+    image: gcr.io/cadvisor/cadvisor:v0.46.0
+    container_name: cadvisor
+    ports:
+      - "8088:8080"
+    volumes:
+      - /:/rootfs:ro
+      - /var/run:/var/run:rw
+      - /sys:/sys:ro
+      - /var/lib/docker/:/var/lib/docker:ro
+
   node-exporter:
     image: prom/node-exporter
     volumes:
