--- a/monitor/prometheus.yml
+++ b/monitor/prometheus.yml
@@ -5,6 +5,9 @@ scrape_configs:
   - job_name: 'node-exporter'
     static_configs:
       - targets: ['node-exporter:9100']
+  - job_name: 'cadvisor'
+    static_configs:
+      - targets: ['cadvisor:8080']
   - job_name: 'nginx'
     static_configs:
       - targets: ['172.18.0.4:9100']
