--- a/monitor/prometheus.yml
+++ b/monitor/prometheus.yml
@@ -1,19 +1,26 @@
+# my global config
 global:
-  scrape_interval: 15s
+  scrape_interval: 15s # 采集被监控段指标的一个周期
+  evaluation_interval: 15s # 告警评估的一个周期
 
+# 告警的配置文件
+alerting:
+  alertmanagers:
+    - static_configs:
+        - targets:
+          # - alertmanager:9093
+
+# 告警规则配置
+rule_files:
+  # - "first_rules.yml"
+# 被监控端的配置,目前只有一个节点，就是prometheus本身
 scrape_configs:
-  - job_name: 'node-exporter'
+  - job_name: "prometheus"
     static_configs:
-      - targets: ['node-exporter:9100']
-  - job_name: 'cadvisor'
+      - targets: ["localhost:9090"]
+  - job_name: "cadvisor"
     static_configs:
-      - targets: ['cadvisor:8080']
-  - job_name: 'nginx'
+      - targets: ["cadvisor:8080"]
+  - job_name: "grafana"
     static_configs:
-      - targets: ['172.18.0.4:9100']
-  - job_name: 'rust_api'
-    static_configs:
-      - targets: ['172.18.0.2:9100']
-  - job_name: 'node_api'
-    static_configs:
-      - targets: ['172.18.0.3:9100']
+      - targets: ["grafana:3000"]
