--- a/monitor/prometheus.yml
+++ b/monitor/prometheus.yml
@@ -13,11 +13,11 @@ alerting:
 # 告警规则配置
 rule_files:
   # - "first_rules.yml"
-# 被监控端的配置,目前只有一个节点，就是prometheus本身
+# 被监控端的配置
 scrape_configs:
   - job_name: "prometheus"
     static_configs:
-      - targets: ["localhost:9090"]
+      - targets: ["prometheus:9090"]
   - job_name: "cadvisor"
     static_configs:
       - targets: ["cadvisor:8080"]
