--- a/monitor/docker-compose.yml
+++ b/monitor/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   prometheus:
-    image: prom/prometheus
+    image: registry-vpc.cn-hangzhou.aliyuncs.com/zeroapp/prometheus:latest
     container_name: prometheus
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
@@ -13,7 +13,7 @@ services:
     depends_on:
       - cadvisor
   cadvisor:
-    image: gcr.io/cadvisor/cadvisor
+    image: registry-vpc.cn-hangzhou.aliyuncs.com/zeroapp/cadvisor:latest
     container_name: cadvisor
     ports:
       - "9091:8080"
@@ -27,7 +27,7 @@ services:
     depends_on:
       - grafana
   grafana:
-    image: grafana/grafana
+    image: registry-vpc.cn-hangzhou.aliyuncs.com/zeroapp/grafana:latest
     container_name: grafana
     environment:
       - GF_SECURITY_ADMIN_PASSWORD=admin
@@ -35,7 +35,7 @@ services:
     ports:
       - '9092:3000'
   node_exporter:
-    image: prom/node-exporter
+    image: registry-vpc.cn-hangzhou.aliyuncs.com/zeroapp/node-exporter:latest
     container_name: node_exporter
     ports:
       - "9093:9100"
