--- a/monitor/prometheus.yml
+++ b/monitor/prometheus.yml
@@ -24,6 +24,9 @@ scrape_configs:
   - job_name: "grafana"
     static_configs:
       - targets: ["grafana:3000"]
-  - job_name: "node_exporter"
+  - job_name: "node_app1"
     static_configs:
       - targets: ["node_exporter:9100"]
+  - job_name: "node_app2"
+    static_configs:
+      - targets: ["47.96.135.99:9100"]
