--- a/shell/rust_api.service
+++ b/shell/rust_api.service
@@ -3,6 +3,7 @@ Description=Rust API Service
 
 [Service]
 ExecStart=/root/project/rust_api/target/release/rust_api
+ExecReload=/root/project/rust_api/target/release/rust_api
 WorkingDirectory=/root/project/rust_api
 Restart=always
 User=root
